1-getting-started/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-1-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: / # it rewrites the endpoint, for example, remove /api
spec:
  rules:
    - host: "tellmesomethingtruthy.com" # a fancy host I defined :)
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: app-1-service # the service name (look at file cluster-ip.yml)
                port: 
                  number: 8080 # the service port (look at file cluster-ip.yml)
